TODO: document import tags aeio, also ae_ naming
TODO: use the eval-with-cb-call trick also to speed up JSON?
lib/AnyEvent/DNS.pm:   open my $fh, "<", $resolv_conf
lib/AnyEvent/DNS.pm:         if (open my $fh, "ipconfig /all |") {
lib/AnyEvent/TLS.pm:         or croak "$dh_file: failed to open DH parameter file: $!";
TODO: disable logging to a context while it is being logged to?

6.2
        - child watchers are broken in POE 1.352 (also many earlier
          versions)and there seems to be no way to work around it, as POE
          itself is inherently racy. Document this regression and sleep a
          second in t/68_poe_03_child.t for the time being.
	- new module AnyEvent::IO, that is a frontend to either a pure-perl
          synchronous I/O implementation (AnyEvent::IO::Perl), or to the
          asynchronous I/O extension IO::AIO (AnyEvent::IO::IOAIO).
        - load /etc/hosts only when dns fails has no answer.
        - stat /etc/hosts on every access and reload it if it changed.
        - load /etc/hosts via AnyEvent::IO - potentially asynchronous.
        - AnyEvent::Log log_to_file and log_to_path now use AnyEvent::IO. As
          a side effect, they now use true appending as opposed to libc
          appending, and the file might not have been opened when the function
          returns.
        - the default logging level was not properly documented in a variety of
          places, this has hopefully been rectified.
	- updated uts46data.pl for unicode 6.1.0.
        - made log messages genearted by AnyEvent submodules not
          include the package name anymore, as it will be logged
          by default already.
        - upgrade to the trick used by common-sense 3.5 to work
          around extra warning torture/breakage under perl 5.15.x.
        - log messages by anyevent are now ucfirst, are usually full
          sentences and do no longer include the package name.
        - the storable read type would sometimes throw an exception instead