@@ -8,6 +8,7 @@ lib/AnyEvent/DNS.pm:   open my $fh, "<", $resolv_conf
 lib/AnyEvent/DNS.pm:         if (open my $fh, "ipconfig /all |") {
 lib/AnyEvent/TLS.pm:         or croak "$dh_file: failed to open DH parameter file: $!";
 TODO: disable logging to a context while it is being logged to?
+TODO: testsuite truncate, chmod, utime?
 
 6.2
         - child watchers are broken in POE 1.352 (also many earlier
